<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/grayBackground"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"
            android:autofillHints=""
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:padding="9dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:autofillHints=""
            android:background="@color/white"
            android:padding="9dp"/>

        <TextView
            android:id="@+id/create_new_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/create_a_new_account"
            android:padding="5dp"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="150dp"
            android:text="@string/sign_in"
            android:padding="15dp"
            app:cornerRadius="4dp" />

        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            android:layout_marginEnd="4dp"
            android:padding="15dp"
            app:cornerRadius="4dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_search"/>

        <TextView
            android:id="@+id/sign_up_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_phone"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</LinearLayout>